--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -963,3 +963,12 @@ button.btn-close {
   border-radius: 0 0 20px 20px;
   z-index: 99;
 }
+/* Added by Waqas */
+.banner-blog {
+  min-height: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover !important;
+  background-position: top !important;
+}
